<resources>
    <string name="app_name">Teams</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_admin_dashboard">Admin Dashboard</string>
    <string name="menu_coach_team">My Team</string>
    <string name="menu_add_team">Add Team</string>
    <string name="menu_settings">Settings</string>

    <string name="title_admin_dashboard">Coach Admin Dashboard</string>
    <string name="title_coach_team">Coach Team Performance</string>
    <string name="title_add_team">Register New Team</string>

    <string name="label_team_id">Team ID (from Referee)</string>
    <string name="label_coach_email">Coach Email</string>
    <string name="label_play_criteria">Everyone Plays Rule</string>
    <string name="criteria_none">No Requirement</string>
    <string name="criteria_half">Half Game</string>
    <string name="criteria_three_quarters">3/4 Game</string>
    <string name="btn_save_team">Save Team</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
</resources>